--- a/register.html
+++ b/register.html
@@ -3,10 +3,14 @@
 <html>
 <head>
     <title>Strategy League - Register</title>
+    <link href="mystyle.css" rel="stylesheet">
 </head>
-
 <body>
-
+    <div id="container">
+        <div id="register">
+            
+        </div>
+    </div>
 
 
 </body>
