--- a/register.html
+++ b/register.html
@@ -8,7 +8,8 @@
 <body>
     <div id="container">
         <div id="register">
-            
+            <div class="logo"></div>
+            SIGN IN
         </div>
     </div>
 
